Fix scroll stutter issue on mobile and tablet, and fix contact button not visible in mobile iOS

--- a/src/Sections/Contact/Contact.scss
+++ b/src/Sections/Contact/Contact.scss
@@ -69,6 +69,7 @@
       padding: 0.5rem;
       transition: 0.3s ease;
       background-color: white;
+      color: black;
       cursor: pointer;
 
       &:hover {
